# valkyrie-enhance

./: .gitignore  LICENSE  README.md  pyproject.toml
configs/: realtime.yaml  research_baseline.yaml
integrations/reshade/: README.md  VALKYRIE.ini  VALKYRIE_Addon_Template.cpp
native/: build_native.py  valkyrie_native.cpp  valkyrie_native_kernel.cu
paper/: valkyrie_paper.tex
results/ablation/: README.md  module_ablation.json
results/fps_benchmarks/: README.md  summary.md
results/quality_benchmarks/: README.md  media_benchmark_rows.json  media_benchmark_summary.md  summary.md  synthetic_benchmark_rows.json
src/valkyrie/: __init__.py  cli.py  config.py  engine.py  experiments.py  ffmpeg_pipeline.py  io.py  metrics.py  monitoring.py  native.py  real_benchmarks.py  reporting.py  reshade.py  tensorrt_optimize.py  types.py
src/valkyrie/modules/: __init__.py  adaptive.py  audio.py  base.py  benchmark.py  face_object.py  hdr.py  latency.py  perceptual.py  restoration.py  scene.py  temporal.py  upscaling.py
tests/: test_config_and_reporting.py  test_engine.py  test_io.py  test_modules.py  test_runtime_integrations.py
